Fix text alignment on puttanesca recipe page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -819,4 +819,27 @@ footer a:hover {
         .garlic-text p {
             font-size: 1.6em;
         }
+
+        .mail-sign-up {
+            width: 50%;
+        }
+
+        .mail-sign-up-header {
+            font-size: 2.5em;
+        }
+        
+        .mail-sign-up-p {
+            font-size: 1.4em;
+        }
+        
+        .mail-sign-up input {
+            color: gray;
+            font: inherit;
+            font-size: 1.2em;
+        }
+        
+        .mail-sign-up button {
+            height: 40px;
+            font-size: 1.4em;
+        }
 }
